[package]
authors = ["Chris Swindle <christopher.swindle@metaswitch.com>"]
cargo-features = ["alternative-registries"]
name = "caesium"
version = "0.1.0"

[dependencies]
error-chain = "0.11.0"
futures = "0.1.17"
git2 = "0.6.8"
hyper = "0.11.7"
nom = "3.2.1"
router = "0.5.1"
rust-crypto = "0.2.36"
serde = "1.0.21"
serde_derive = "1.0.21"
serde_json = "1.0.6"
tokio-core = "0.1.10"
toml = "0.4.5"
url = "1.6.0"
